added functionality to accept SpatRaster and SpatVector for opt.sample function.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,10 +34,12 @@ importFrom(snowfall,sfInit)
 importFrom(snowfall,sfLapply)
 importFrom(snowfall,sfLibrary)
 importFrom(snowfall,sfStop)
+importFrom(terra,coords)
 importFrom(terra,ncol)
 importFrom(terra,nrow)
 importFrom(terra,rast)
 importFrom(terra,res)
+importFrom(terra,values)
 importFrom(terra,writeRaster)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
