--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,5 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Depends: R (>= 4.1)
-Imports: DescTools, RSAGA, bestNormalize, clhs, diptest, dplyr, fields, fmsb, ggplot2, ggpubr, magrittr, matrixStats, mixtools,
+Imports: DescTools, RSAGA, bestNormalize, clhs, diptest, dplyr, fields, fmsb, ggplot2, ggpubr, magrittr, matrixStats, methods, mixtools,
  mousetrap, nortest, onsoilsurvey, reshape2, snowfall, stats, terra, whitebox
