--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ importFrom(ggpubr,ggarrange)
 importFrom(ggpubr,text_grob)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,colSds)
+importFrom(methods,is)
 importFrom(mixtools,normalmixEM)
 importFrom(mousetrap,bimodality_coefficient)
 importFrom(nortest,ad.test)
@@ -34,7 +35,7 @@ importFrom(snowfall,sfInit)
 importFrom(snowfall,sfLapply)
 importFrom(snowfall,sfLibrary)
 importFrom(snowfall,sfStop)
-importFrom(terra,coords)
+importFrom(terra,crds)
 importFrom(terra,ncol)
 importFrom(terra,nrow)
 importFrom(terra,rast)
